<resources>
    <string name="app_name">Estou Aqui</string>

    <!--  Tela Opções Login  -->
    <string name="text_facebook">FaceBook</string>
    <string name="text_create_conta">Criar Conta</string>
    <string name="text_google">Google</string>

    <!--Tela Criçao Conta-->
    <string name="text_aprecentacao_create_conta">Como deseja criar sua conta</string>
    <string name="text_email">E-mail</string>
    <string name="text_senha">Senha</string>
    <string name="esqueceu">Esqueceu a senha ?</string>
    <string name="descricao_voltar">voltar</string>

    <!--Tela Log in-->
    <string name="text_aprecentacao_login">Bem Vindo ao Estou Aqui</string>
    <string name="texto_usuario">Usuário</string>
    <string name="texto_login">Log in</string>
    <string name="text_aprecentacao_create_conta">Como deseja criar sua conta</string>
    <string name="text_aprecentacao_create_conta">Como deseja criar sua conta</string>



</resources>
