<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/activity_cadastro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="@color/fundologin"
    tools:context="com.diego.estouaqui.CadastroActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/opcoes">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:id="@+id/backButton"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="16dp"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:contentDescription="@string/descricao_voltar" />

        <Button
            android:text="@string/esqueceu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgot"
            android:textSize="13sp"
            android:background="@android:color/transparent"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textAllCaps="false"
            android:layout_alignRight="@+id/backButton"
            android:layout_alignEnd="@+id/backButton"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/opcoes"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/text_create_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:textSize="30sp"
            android:textColor="@color/textBranco"
            android:id="@+id/tituloTela"/>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="35dp"
          android:paddingBottom="16dp"
          android:orientation="vertical">

          <TextView
              android:layout_marginTop="15dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_email"
              android:textSize="17sp"
              android:id="@+id/txt_email"
              android:textColor="@color/textBranco"/>

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"
              android:ems="10"
              android:layout_marginTop="10dp"
              android:textColor="@color/textBranco"
              android:layout_marginBottom="15dp"
              android:id="@+id/editText1" />

          <TextView
              android:layout_marginTop="15dp"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_senha"
              android:id="@+id/txt_senha"
              android:textSize="17sp"
              android:textColor="@color/textBranco"/>

          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:layout_marginTop="10dp"
              android:layout_marginBottom="15dp"
              android:textColor="@color/textBranco"
              android:ems="10"
              android:id="@+id/editText" />


      </LinearLayout>

  </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:src="@drawable/ic_done_white"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:id="@+id/botaoDone"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/fundologinopaco"
       />


</RelativeLayout>
